[package]
name = "crypto-key-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hashing primitives
sha2 = "0.10"
ripemd = "0.1"

# HMAC and key derivation
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# Elliptic Curve Cryptography (secp256k1)
secp256k1 = { version = "0.28", features = ["rand", "recovery", "global-context"] }

# Big integer arithmetic
num-bigint = "0.4"
num-traits = "0.2"

# Sensitive data cleanup
zeroize = "1.7"
hex = "0.4"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = true